disable-default-SA-gatekeeper/template.yaml
---
apiVersion: templates.gatekeeper.sh/v1beta1
kind: ConstraintTemplate
metadata:
  name: k8sdisabledefaultsa
spec:
  crd:
    spec:
      names:
        kind: K8sDisableDefaultSA
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8sdisabledefaultsa
        arr_kinds := ["Deployment", "DaemonSet", "StatefulSet", "ReplicationController", "Job", "CronJob", "ReplicaSet"]
        spec_content = input.review.object.spec.template.spec {
          count([ kind | kind = arr_kinds[i] ; arr_kinds[i] == input.review.object.kind]) > 0
          input.review.object.kind != "CronJob"
        } else = input.review.object.spec.jobTemplate.spec.template.spec {
          input.review.object.kind == "CronJob"
        } else = input.review.object.spec {
          input.review.object.kind == "Pod"
        }
        violation[{"msg": msg}] {
            count([x | spec_content[x] == "default";x=="serviceAccountName"]) > 0
            msg := "[Error - disable-default-sa]: default ServiceAccount is not allowed."
            }
